Closed Bug 1556145 Opened 6 years ago Closed 6 years ago

Totally spammy warning: [12024, Main Thread] WARNING: '!incumbentSettingsObject', file c:/mozilla-source /comm-central/dom/canvas/CanvasUtils.cpp, line 305

Categories

(Core :: DOM: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox69 --- fixed

People

(Reporter: jorgk-bmo, Assigned: baku)

Details

(Whiteboard: [domsecurity-active])

Attachments

(1 file)

I get hundreds of those in Thunderbird, but I assume that they exist in Firefox as well.

BTW, there's no DOM::General any more, so this is likely in the wrong component, I picked the one of bug 1330467 which last touched the file.

So it looks like you moved the code from dom/canvas/ImageBitmap.cpp to CanvasUtils.cpp are you able to take a look into this?

Thanks

Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Whiteboard: [domsecurity-active]

Patch written.

Flags: needinfo?(amarchesini)
Pushed by amarchesini@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/71a80317d5b4 Remove a spammy warning in CanvasUtils.cpp, r=jkt
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: