Bug 1556145 - Remove a spammy warning in CanvasUtils.cpp, r=jkt

Differential Revision: https://phabricator.services.mozilla.com/D33752